--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: aditya-kothari-demo-application
-  namespace: argocd-demo-devops-ia
+  name: aditya-demo-app
+  namespace: argocd-devops-demo
 spec:
   project: default
   source:
@@ -15,4 +15,6 @@ spec:
   syncPolicy:
     automated:
       prune: true
-      selfHeal: true
+      selfHeal: false
+    syncOptions:
+    - CreateNamespace=true
